fix: improve data fetching logic to prevent duplicate records and enhance logging